--- a/pages/4000-enssential-english-words/flashcard.html
+++ b/pages/4000-enssential-english-words/flashcard.html
@@ -65,8 +65,8 @@
         </form>
     </div>
 
-    <script defer async type="text/javascript" src="../../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../../scripts/tts.js"></script>
     <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/flashcard.js"></script>
 
