--- a/pages/4000-enssential-english-words/quiz.html
+++ b/pages/4000-enssential-english-words/quiz.html
@@ -29,8 +29,8 @@
         </div>
     </div>
     
-    <script defer async type="text/javascript" src="../../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/quiz.js"></script>
 </body>
 
