--- a/pages/4000-enssential-english-words/speech-assessment.html
+++ b/pages/4000-enssential-english-words/speech-assessment.html
@@ -75,8 +75,8 @@
         <button class="btn close-btn" onclick="hidePopup()">Close</button>
     </div>
 
-    <script defer async type="text/javascript" src="../../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../../scripts/iload.js"></script>
     <script defer async type="text/javascript" src="../../scripts/record.js"></script>
     <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/speech-assessment.js"></script>
