--- a/pages/text-to-speech.html
+++ b/pages/text-to-speech.html
@@ -52,8 +52,8 @@
         <button class="btn btn-info" type="button" onclick="fetchData()">Generate</button>
     </div>
 
-    <script defer async type="text/javascript" src="../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../scripts/master.js"></script>
+    <script type="text/javascript" src="../scripts/constant.js"></script>
+    <script type="text/javascript" src="../scripts/master.js"></script>
     <script>
         const fetchData = async () => {
             const inputText = document.getElementById('input-text').value;
