--- a/pages/4000-enssential-english-words/flashcard-list.html
+++ b/pages/4000-enssential-english-words/flashcard-list.html
@@ -17,8 +17,8 @@
     <div class="container" id="container">
     </div>
 
-    <script defer async type="text/javascript" src="../../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/flashcard-list.js"></script>
 
 </body>
