--- a/pages/4000-enssential-english-words/scramble-words.html
+++ b/pages/4000-enssential-english-words/scramble-words.html
@@ -35,8 +35,8 @@
         </div>
     </div>
 
-    <script defer async type="text/javascript" src="../../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/scramble-words.js"></script>
 </body>
 
