--- a/pages/4000-enssential-english-words/unit.html
+++ b/pages/4000-enssential-english-words/unit.html
@@ -63,8 +63,8 @@
         </div>
     </div>
 
-    <script defer async type="text/javascript" src="../../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/master.js"></script>
+    <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/unit.js"></script>
 </body>
 
