--- a/pages/sentences.html
+++ b/pages/sentences.html
@@ -36,8 +36,8 @@
 
     <script defer async type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script defer async type="text/javascript" src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer async type="text/javascript" src="../scripts/constant.js"></script>
-    <script defer async type="text/javascript" src="../scripts/master.js"></script>
+    <script type="text/javascript" src="../scripts/constant.js"></script>
+    <script type="text/javascript" src="../scripts/master.js"></script>
     <script defer async type="text/javascript" src="../scripts/tts.js"></script>
     <script defer async type="text/javascript" src="../scripts/sentences.js"></script>
 </body>
