Remove defer async

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="row" style="margin-top: 15px; padding: 0 10px;">
             <div class="col action">
                 <button class="btn btn-orange" onclick="openSpeechAssessment()">
-                    <img src="../../assets/images/speaking.png" />
-                    Speech Assessment
+                    <img src="assets/images/speaking.png" />
+                    Word Assessment
                 </button>
             </div>
         </div>
@@ -58,11 +58,8 @@
     <script type="text/javascript" src="scripts/master.js"></script>
     <script>
         const openEssential = () => location.href = `${PATH.ESSENTIAL_ROUTE}flashcard-list.html`;
-        const openSentences = ()  => location.href = `${PATH.DEFAULT_ROUTE}sentences.html`;
+        const openSentences = () => location.href = `${PATH.DEFAULT_ROUTE}sentences.html`;
         const openSTT = () => location.href = `${PATH.DEFAULT_ROUTE}speech-to-text.html`;
         const openTTS = () => location.href = `${PATH.DEFAULT_ROUTE}text-to-speech.html`;
-        const openSpeechAssessment = ()  => location.href = `${PATH.DEFAULT_ROUTE}speech-assessment.html`;
+        const openSpeechAssessment = () => location.href = `${PATH.DEFAULT_ROUTE}word-assessment.html`;
     </script>
-</body>
-
-</html>
