--- a/pages/4000-enssential-english-words/speech-assessment.html
+++ b/pages/4000-enssential-english-words/speech-assessment.html
@@ -77,11 +77,11 @@
 
     <script type="text/javascript" src="../../scripts/constant.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/iload.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/record.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/tts.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/speech-assessment.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/speech-assessment.js"></script>
+    <script type="text/javascript" src="../../scripts/iload.js"></script>
+    <script type="text/javascript" src="../../scripts/record.js"></script>
+    <script type="text/javascript" src="../../scripts/tts.js"></script>
+    <script type="text/javascript" src="../../scripts/word-assessment.js"></script>
+    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/speech-assessment.js"></script>
 </body>
 
 </html>
