--- a/pages/4000-enssential-english-words/vocabularies.html
+++ b/pages/4000-enssential-english-words/vocabularies.html
@@ -18,8 +18,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="../../scripts/constant.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/tts.js"></script>
-    <script defer async type="text/javascript" src="../../scripts/4000-enssential-english-words/vocabularies.js"></script>
+    <script type="text/javascript" src="../../scripts/tts.js"></script>
+    <script type="text/javascript" src="../../scripts/4000-enssential-english-words/vocabularies.js"></script>
 
 </body>
 
