--- a/pages/word-assessment.html
+++ b/pages/word-assessment.html
@@ -97,7 +97,7 @@
         <div class="tab-content" id="container">
             <div class="word-info" id="word-info">
                 <div class="input-word-text">
-                    <span id="word-en">TEST</span>
+                    <span id="word-en">Text</span>
                     <span id="word-pron"></span>
                     <input type="text" value="Test" id="input-word" style="display: none;" />
                     <button class="btn-edit" id="btn-input-word" onclick="editWord()">
@@ -149,8 +149,8 @@
     <script type="text/javascript" src="../scripts/master.js"></script>
     <script type="text/javascript" src="../scripts/iload.js"></script>
     <script type="text/javascript" src="../scripts/record.js"></script>
-    <script defer async type="text/javascript" src="../scripts/tts.js"></script>
-    <script defer async type="text/javascript" src="../scripts/speech-assessment.js"></script>
+    <script type="text/javascript" src="../scripts/tts.js"></script>
+    <script type="text/javascript" src="../scripts/word-assessment.js"></script>
     <script>
         const startBtn = document.getElementById('start-record');
         const stopBtn = document.getElementById('stop-record');
@@ -209,6 +209,7 @@
             if (!canRecord || !recorder.canRecord)
                 return;
 
+            saveWord();
             let wordText = document.getElementById("word-en").textContent;
             const params = Object.assign({
                 coreType: SPEECH_ASSESSMENT.CORE_TYPE,
