--- a/pages/4000-enssential-english-words/flashcard-list.html
+++ b/pages/4000-enssential-english-words/flashcard-list.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>4000 essential english words</h1>
-    <button class="close-button" onclick="backToHome()"></button>
+    <button class="close-button" onclick="backToHomePage()"></button>
     <div class="container" id="container">
     </div>
 
