Use gg app script for server

--- a/pages/4000-enssential-english-words/flashcard.html
+++ b/pages/4000-enssential-english-words/flashcard.html
@@ -43,6 +43,7 @@
     </div>
 
     <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/service.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
     <script type="text/javascript" src="../../scripts/tts.js"></script>
     <script type="text/javascript" src="../../scripts/4000-enssential-english-words/flashcard.js"></script>
