--- a/pages/4000-enssential-english-words/quiz.html
+++ b/pages/4000-enssential-english-words/quiz.html
@@ -30,6 +30,7 @@
     </div>
     
     <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/service.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
     <script type="text/javascript" src="../../scripts/4000-enssential-english-words/quiz.js"></script>
 </body>
