--- a/pages/4000-enssential-english-words/scramble-words.html
+++ b/pages/4000-enssential-english-words/scramble-words.html
@@ -36,6 +36,7 @@
     </div>
 
     <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/service.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
     <script type="text/javascript" src="../../scripts/4000-enssential-english-words/scramble-words.js"></script>
 </body>
