--- a/pages/4000-enssential-english-words/story.html
+++ b/pages/4000-enssential-english-words/story.html
@@ -28,6 +28,7 @@
     </div>
 
     <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/service.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
     <script type="text/javascript" src="../../scripts/4000-enssential-english-words/story.js"></script>
 
