--- a/pages/4000-enssential-english-words/unit.html
+++ b/pages/4000-enssential-english-words/unit.html
@@ -64,6 +64,7 @@
     </div>
 
     <script type="text/javascript" src="../../scripts/constant.js"></script>
+    <script type="text/javascript" src="../../scripts/service.js"></script>
     <script type="text/javascript" src="../../scripts/master.js"></script>
     <script type="text/javascript" src="../../scripts/4000-enssential-english-words/unit.js"></script>
 </body>
