--- a/pages/text-to-speech.html
+++ b/pages/text-to-speech.html
@@ -55,6 +55,7 @@
     </div>
 
     <script type="text/javascript" src="../scripts/constant.js"></script>
+    <script type="text/javascript" src="../scripts/service.js"></script>
     <script type="text/javascript" src="../scripts/master.js"></script>
     <script>
         const fetchData = async () => {
