--- a/pages/word-evaluation.html
+++ b/pages/word-evaluation.html
@@ -89,6 +89,7 @@
     </div>
 
     <script type="text/javascript" src="../scripts/constant.js"></script>
+    <script type="text/javascript" src="../scripts/service.js"></script>
     <script type="text/javascript" src="../scripts/master.js"></script>
     <script type="text/javascript" src="../scripts/iload.js"></script>
     <script type="text/javascript" src="../scripts/record.js"></script>
