--- a/study.html
+++ b/study.html
@@ -31,6 +31,7 @@
     </div>
 
     <script type="text/javascript" src="scripts/constant.js"></script>
+    <script type="text/javascript" src="scripts/service.js"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
     <script type="text/javascript" src="scripts/tts.js"></script>
     <script type="text/javascript" src="scripts/study.js"></script>
