--- a/pages/sentences.html
+++ b/pages/sentences.html
@@ -17,10 +17,13 @@
     <div class="container">
         <button class="close-button" onclick="backToHome()"></button>
         <div class="row">
-            <div class="col">
-                <button class="btn btn-info" type="button" disabled id="show-all">Flip all</button>
+            <div class="col-5">
+                <button class="btn btn-purple" type="button" disabled id="show-all">Flip all</button>
             </div>
-            <div class="col">
+            <div class="col-2">
+                <button class="btn btn-info" type="button" disabled id="reset">Add</button>
+            </div>
+            <div class="col-5">
                 <button class="btn btn-warning" type="button" disabled id="reset">Turn over all</button>
             </div>
         </div>
